--- a/app/src/main/res/layout/activity_standby.xml
+++ b/app/src/main/res/layout/activity_standby.xml
@@ -7,59 +7,10 @@
     android:background="@color/background_dark"
     tools:context=".presentation.standby.StandbyActivity">
 
-    <TextClock
-        android:id="@+id/clockTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:format12Hour="h:mm"
-        android:format24Hour="H:mm"
-        android:textAppearance="@style/TextAppearance.MindfulLauncher.Clock.Large"
-        android:textColor="@color/text_primary"
-        app:layout_constraintBottom_toTopOf="@+id/dateTextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:text="10:42" />
-
-    <TextClock
-        android:id="@+id/dateTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:format12Hour="EEEE, d 'de' MMMM"
-        android:format24Hour="EEEE, d 'de' MMMM"
-        android:textAppearance="@style/TextAppearance.MindfulLauncher.Date"
-        android:textColor="@color/text_secondary"
-        app:layout_constraintBottom_toTopOf="@+id/standbyMessage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/clockTextView"
-        tools:text="Quarta-feira, 14 de maio" />
-
-    <TextView
-        android:id="@+id/standbyMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Modo Standby - Toque para retornar"
-        android:textAppearance="@style/TextAppearance.MindfulLauncher.Body1"
-        android:textColor="@color/text_secondary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
-
-    <ImageView
-        android:id="@+id/batteryIcon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="32dp"
-        android:contentDescription="Ícone de bateria"
-        android:src="@android:drawable/ic_lock_idle_charging"
-        android:tint="@color/primary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
